исправил фильтры. внедрил бд

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB_URL="postgresql://area:Zapominai@192.168.1.181:5432/RatingHabits"
+DB_URL="postgresql://area:Zapominai@188.226.47.221:55432/RatingHabits"
+SECRET_KEY=area-ufa-the-best
