--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_URL="postgresql://postgres:Zapominai@localhost:5432/LOCAL"
-# DB_URL="postgresql://area:Zapominai@188.226.47.221:55432/RatingHabits"
+# DB_URL="postgresql://postgres:Zapominai@localhost:5432/LOCAL"
+DB_URL="postgresql://area:Zapominai@188.226.47.221:55432/RatingHabits"
 SECRET_KEY=area-ufa-the-best
